-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0
-
None
-
OSX 10.7
-
35f2a61426dab80af464b0aa24d41a070b4c145c
The autotest txt_qkeysequence parseString is failing for the strings Win+A and Simon+G. From the logs it looks like it is ignoring the first key and instead passing on the second.
OSX 10.7 logs:
http://testresults.qt-project.org/ci/QtBase_master_Integration/build_01989/macx-clang_OSX_10.7/log.txt.gz
- is required for
-
QTBUG-24131 Autotests for Qt 5.0 on OSX
-
- Closed
-
- replaces
-
QTBUG-23058 tst_QKeySequence fails on Mac OS X
-
- Closed
-
| For Gerrit Dashboard: QTBUG-24406 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 74791,1 | QKeySequence: return Qt::Key_unknown with invalid modifiers on OS X | stable | qt/qtbase | Status: MERGED | +2 | 0 |