QKeySequence: return Qt::Key_unknown with invalid modifiers on OS X

This also fixes the auto test, tst_QKeySequence::parseString() with
Win+A and Simon+G.

[ChangeLog][QtGui][OS X][QKeySequence] return Qt::Key_unknown with
invalid modifiers on OS X

Task-number: QTBUG-24406
Change-Id: Ie90393c9691f443c7c359cb3a487609a9691bc44
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@digia.com>

cregit: 35f2a61426dab80af464b0aa24d41a070b4c145c https://github.com/qt/qtbase/commit/35f2a61426dab80af464b0aa24d41a070b4c145c